# Simple_QQ

./: CMakeLists.txt  README.md  start.sh
include/: public.hpp
include/server/: LRUCache.hpp  chatservice.hpp
include/server/db/: connectionpool.hpp
include/server/model/: filepath.hpp  filepathmodel.hpp
public/: _cmpublic.h  _public.cpp  _public.h
src/: CMakeLists.txt
src/chatserver/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/chatserver/db/: connectionpool.cpp  db.cpp  mysql.txt
src/chatserver/ffmpeg/: merge  merge.c
src/chatserver/model/: filepathmodel.cpp  friendmodel.cpp  usermodel.cpp
src/client/: CMakeLists.txt  main.cpp
src/client/fileclient/: getfile.cpp  getfile.hpp  putfile.cpp  putfile.hpp
src/fileserver/: CMakeLists.txt
src/fileserver/src/: fileserver.cpp  fileserver2.cpp
src/scheduling/: CMakeLists.txt  checkprocctl.cpp  procctl.cpp
test/: Makefile  pthread_exit  pthread_exit.cpp
